# CPPExercises

./: .gitignore  .gitmodules  CMakeLists.txt  CPPExercises.pro  README.md
Algorithms/: Algorithms.pro  CMakeLists.txt
Algorithms/BST/: BST.pro  CMakeLists.txt
Algorithms/BST/BinarySearchTrees/: BinarySearchTrees.pro  CMakeLists.txt  avltree.h  redblacktree.cpp  redblacktree.h
Algorithms/BST/BinarySearchTreesApp/: CMakeLists.txt  binarysearchtreesappmain.cpp
Algorithms/BST/BinarySearchTreesLib/: BinarySearchTrees.pro  CMakeLists.txt  alternativeavltree.cpp  alternativeavltree.h  avltree.cpp  (+12 more)
Algorithms/ChessHorse/: CMakeLists.txt  ChessHorse.pro  chesshorsemain.cpp  chesstable.cpp  chesstable.h  chesstable.ixx  commandargumentsparser.cpp  commandargumentsparser.h  main.cpp  userinput.cpp  userinput.h
Algorithms/ChessHorseV2/: CMakeLists.txt  chesshorsemain.cpp  chesshorsev2main.cpp  chesstable.cpp  chesstablev2.cpp  chesstablev2.ixx  commandargumentsparser.cpp  commandargumentsparser.ixx  commandargumentsparserv2.cpp  commandargumentsparserv2.ixx  commandargumentsparsingresult.h
Algorithms/DataOrdering/: CMakeLists.txt  dataordering_io.cpp  dataordering_io.h  dataorderingengine.cpp  dataorderingengine.h  dataorderingmain.cpp
Algorithms/HiddenBoxes/: CMakeLists.txt  HiddenBoxes.pro  boxutils.cpp  boxutils.h  hiddenboxesmain.cpp  main.cpp
Algorithms/HuffmanEncoding/: CMakeLists.txt  HuffmanEncoding.pro  huffmanencoder.cpp  huffmanencoder.h  huffmanmain.cpp
Algorithms/KruskalMinCostTree/: kruskaltree.cpp  kruskaltree.h  main.cpp
Algorithms/KruskalPrim/: CMakeLists.txt  baseengine.cpp  baseengine.h  graphdatatypes.h  kruskal.cpp  kruskal.h  kruskalmain.cpp  prim.cpp  prim.h  primmain.cpp  treeutils.cpp
Algorithms/KruskalTree/: CMakeLists.txt  KruskalTree.pro  kruskalgraph.cpp  kruskalgraph.h  kruskaltreemain.cpp  main.cpp
Algorithms/LexicographicSorting/: CMakeLists.txt  LexicographicSorting.pro  lexicographicalsorter.h  lexicographicsortingmain.cpp  main.cpp
Algorithms/MapColouring/: CMakeLists.txt  MapColouring.pro  main.cpp  mapcolouringmain.cpp  mapcolouringutils.cpp  mapcolouringutils.h
Algorithms/Other/: CMakeLists.txt  tst_datautilstests.cpp  tst_matrixalgorithmstests.cpp
Algorithms/PrimTree/: CMakeLists.txt  primgraph.cpp  primgraph.h  primtreemain.cpp
Algorithms/Regex/: CMakeLists.txt  tst_regextests.cpp
Algorithms/STL/: CMakeLists.txt  gather.cpp  gather.h  tst_combinedstltests.cpp  tst_combinedstltests_data.cpp  tst_combinedstltests_data.h  tst_comparisonpermutationtests.cpp  tst_cpp2xrangestests.cpp  tst_heaptests.cpp  tst_minmaxtests.cpp  tst_modifyingsequencetests.cpp  tst_nonmodifyingsequencetests.cpp  tst_numericoperationstests.cpp  tst_othertests.cpp  tst_partitioningtests.cpp  tst_sortedrangestests.cpp  tst_sortingtests.cpp  tst_uninitializedmemoryoperationstests.cpp
Algorithms/Tree/: CMakeLists.txt
Algorithms/WordsCounting/: CMakeLists.txt  wordscounter.cpp  wordscounter.h  wordscountingmain.cpp
CPPConcepts/: CMakeLists.txt  CPPConcepts.pro
CPPConcepts/ArrayReference/: ArrayReference.pro  CMakeLists.txt  arrayreferencemain.cpp
CPPConcepts/CPPCasts/: CMakeLists.txt  constcastmain.cpp  objectprintutils.cpp  objectprintutils.h  objects.cpp  objects.h  reinterpretcastmain.cpp
CPPConcepts/EarlyAndLateBinding/: CMakeLists.txt  EarlyAndLateBinding.pro  earlyandlatebindingmain.cpp  main.cpp
CPPConcepts/InheritanceChain/: CMakeLists.txt  InheritanceChain.pro  inheritancechain.h  inheritancechainmain.cpp
CPPConcepts/ModulePartitions/: CMakeLists.txt
CPPConcepts/NewerConcepts/: CMakeLists.txt  customcpp20concepts.h  tst_cpp17conceptstests.cpp  tst_cpp20conceptstests.cpp  variadictemplates.h
CPPConcepts/PartialTemplateSpecialization/: CMakeLists.txt  PartialTemplateSpecialization.pro  pointertemplates.h  tst_partialtemplatespecialization.cpp
CPPConcepts/ReinterpretCast/: CMakeLists.txt  objects.cpp  objects.h  reinterpretcastmain.cpp
CPPConcepts/RuntimePolymorphism/: CMakeLists.txt  containers.cpp  containers.h  datatypes.cpp  datatypes.h  datawrapper.h  runtimepolymorphismmain.cpp
CPPConcepts/Union/: CMakeLists.txt  Union.pro  unionmain.cpp
CPPConcepts/VirtualDestructor/: CMakeLists.txt  VirtualDestructor.pro  main.cpp  nonvirtualdestructor.cpp  nonvirtualdestructor.h  virtualdestructor.h  virtualdestructormain.cpp
DesignPatterns/AdapterPattern/: AdapterPattern.pro  CMakeLists.txt  adapterpatternmain.cpp  hdmicard.cpp  hdmicard.h  hdmidisplay.cpp  hdmidisplay.h  vgaadapter.cpp  vgaadapter.h  vgadisplay.h
DesignPatterns/Timer/: CMakeLists.txt  Timer.pro  timer.cpp  timer.h  timermain.cpp
InterProcessCommunication/: CMakeLists.txt  InterProcessCommunication.pro
InterProcessCommunication/CharCounter/: CMakeLists.txt  README.txt  aggregatorfactory.cpp  aggregatorfactory.h  charcountermain.cpp  concreteaggregators.cpp  concreteaggregators.h  concreteparsers.cpp  concreteparsers.h  digitsparser.cpp  iaggregator.h  main.cpp  parser.cpp  parser.h  parserfactory.cpp  parserfactory.h  parsingengine.cpp  parsingengine.h  parsingqueue.cpp  parsingqueue.h  utilities.h
InterProcessCommunication/Hosts/: CMakeLists.txt  README.txt  apputils.cpp  apputils.h  csvaggregator.cpp  csvaggregator.h  csvparser.cpp  csvparser.h  csvparsingqueue.cpp  csvparsingqueue.h  datautils.h  exampleoutput.csv  hostdatautils.h  hostsmain.cpp  icsvaggregator.h  main.cpp
InterProcessCommunication/MessageQueues/: CMakeLists.txt  MessageQueues.pro  queuedatamessages.cpp  queuedatamessages.h  queuedataobjects.cpp  queuedataobjects.h  queuedatatypes.h  queuereceiver.cpp  queuereceiver.h  queuereceivermain.cpp  queuesender.cpp  queuesender.h  queuesendermain.cpp  queueutils.cpp  queueutils.h
InterProcessCommunication/NetworkSockets/: CMakeLists.txt  client.cpp  client.h  concurrentclientsmain.cpp  concurrentservermain.cpp
InterProcessCommunication/Semaphore/: CMakeLists.txt  Semaphore.pro  semaphore.cpp  semaphore.h  semaphoremain.cpp
Shared/: CMakeLists.txt  datautils.cpp  datautils.h  matrixutils.cpp  matrixutils.h  shared_global.h  utils.h
(+166 files in other folders)
